# arc-c

./: .env.example  .gitignore  CMakeLists.txt  README.md
docs/: README_CN.md
docs/design/: api.md  design.md  interface.md  llm_v2.md  memory_design.md  snippets.md  todo.md  tools_design.md
examples/: CMakeLists.txt  chat_demo.c
examples/hosted/: chat_demo.c  chat_markdown.c  chat_mcp.c  chat_multi_agent.c  chat_stream.c  chat_tools.c  chat_trace.c  chat_tui.c  demo_tools.c  demo_tools.h  hello.c
examples/terminal/: chat_demo.c  chat_markdown.c  chat_tools.c
extras/code-agentc/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  env.example  main.c
extras/code-agentc/cmake/: gen_prompts.cmake
extras/code-agentc/core/: code_agentc.c
extras/code-agentc/include/: code_agent.h  code_agentc.h  code_tools.h  prompt_loader.h  tools.h
extras/code-agentc/prompts/tools/: bash.txt
extras/code-agentc/ref/: bash.ts  read.ts  registry.ts  skill.ts  task.ts  tool.ts
extras/code-agentc/src/: code_agent.c  prompt_loader.c
extras/code-agentc/src/tools/: tool_bash.c  tool_edit.c  tool_grep.c  tool_ls.c  tool_read.c  tool_write.c
extras/code-agentc/tools/: file_tools.c  tools.c
extras/minimal_cli/: .gitignore  CMakeLists.txt  README.md  env.example  main.c
extras/minimal_cli/core/: minimal_cli.c
extras/minimal_cli/include/: builtin_tools.h  minimal_cli.h
extras/minimal_cli/tools/: builtin_tools.c
include/: agentc.h
include/agentc/: http_client.h  llm.h  platform.h
libs/ac_core/: CMakeLists.txt
libs/ac_core/include/: agentc.h
libs/ac_core/include/agentc/: agent.h  agent_hooks.h  arena.h  error.h  llm.h  log.h  mcp.h  memory.h  message.h  platform.h  session.h  tool.h  trace.h
libs/ac_core/include/arc/: llm.h  message.h  platform.h
libs/ac_core/port/: README_HTTP.md  http_client.h  http_curl.c  pthread_port.h
libs/ac_core/port/freertos/: log_freertos.c  time_freertos.c
libs/ac_core/port/posix/: log_posix.c  time_posix.c
libs/ac_core/port/posix/http/: http_curl.c
libs/ac_core/port/windows/: log_windows.c  time_windows.c
libs/ac_core/port/windows/http/: http_curl.c
libs/ac_core/src/: agent.c  agent_hooks.c  agent_hooks_internal.h  agentc.c  arena.c  http_client.c  log.c  memory.c  session.c  tool.c  trace.c
libs/ac_core/src/llm/: anthropic_api.c  llm.c  llm_internal.h  llm_provider.h  openai_api.c  provider.c  sse_parser.c  sse_parser.h
libs/ac_core/src/llm/message/: message_json.c  message_json.h
libs/ac_core/src/llm/providers/: README.md  anthropic.c  openai.c
libs/ac_core/src/mcp/: mcp.c
libs/ac_core/src/memory/: message.c
libs/ac_core/src/tools/: tool.c  tool_mcp.c
libs/ac_hosted/: CMakeLists.txt  README.md
libs/ac_hosted/include/agentc/: mcp.h  rules.h  sandbox.h  skills.h  trace_exporters.h
libs/ac_hosted/src/markdown/: md.h  md_parser.c  md_parser.h  md_renderer.c  md_renderer.h  md_stream.c  md_stream.h  md_style.h  md_types.h  md_utils.c  md_utils.h
libs/ac_hosted/src/mcp/: mcp.c
libs/ac_hosted/src/rules/: rules.c
libs/ac_hosted/src/sandbox/: sandbox_common.c  sandbox_fallback.c  sandbox_internal.h  sandbox_linux.c  sandbox_macos.c
libs/ac_hosted/src/skills/: skill_parser.c  skill_prompt.c  skills.c  skills_internal.h
libs/ac_hosted/src/trace/: trace_json_exporter.c
src/: agentc.c  llm.c
src/backend/: curl_backend.c
tests/: CMakeLists.txt
tools/: CMakeLists.txt
tools/moc/: CMakeLists.txt  main.c  moc.h  moc_codegen.c  moc_comment.c  moc_parser.c  moc_utils.c
tools/moc/test/: CMakeLists.txt  sample_tools.c  sample_tools.h  test_moc.c
tools/moc/tree-sitter-c/src/: grammar.json
