# AgentC Unit Tests

cmake_minimum_required(VERSION 3.14)

# Enable testing
enable_testing()

# TODO: Add test sources
# Example:
# add_executable(test_llm test_llm.c)
# target_link_libraries(test_llm PRIVATE ac_core::ac_core)
# add_test(NAME test_llm COMMAND test_llm)

message(STATUS "AgentC Tests: TODO - implement unit tests")
